src/app/mobile.css
/* ... */
/* Small Mobile Devices */
@media (max-width: 480px) {
  .hero h1 {
    font-size: 2.5rem;
  }

  .hero video {
    transform: scale(2.0) !important;
  }

  .case-studies-header h2,
  .works-header h2,
  .footer-header h2 {
    font-size: 2.75rem;
  }

  .case-studies-items-content .container h3 {
    font-size: 2rem;
  }

  .case-studies-content .col:first-child .primary {
    font-size: 1.1rem;
  }

  .case-studies-content .container .col .case-studies-copy h2 {
    font-size: 1.3rem !important;
    letter-spacing: 0.01em !important;
  }

  .works-content .container .col .works-copy h2 {
    font-size: 1.3rem !important;
    letter-spacing: 0.01em !important;
  }

  .works-content .col:first-child .primary {
    font-size: 1.1rem;
  }

  .project-id h2 {
    font-size: 2rem;
    font-weight: 700;
  }

  .project-title h2 {
    font-size: 1.5rem;
    font-weight: 400;
  }
}

/* Landscape Mobile */
@media (max-width: 768px) and (orientation: landscape) {
  .hero {
    height: 100vh;
  }

  .hero h1 {
    font-size: 2rem;
  }

  .case-studies-item {
    min-height: auto;
  }

  .menu-media-wrapper {
    height: 100vh;
  }
}

